// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web installer 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "TestApp-WebSetup-1.0.0.exe",
        "packages": Object {
          "x64": Object {
            "file": "TestApp-1.0.0-x64.nsis.7z",
          },
        },
        "path": "Test App ßW Web Setup 1.0.0.exe",
        "version": "1.0.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.0.0.exe",
      "packageFiles": Object {
        "x64": Object {
          "file": "TestApp-1.0.0-x64.nsis.7z",
        },
      },
      "safeArtifactName": "TestApp-WebSetup-1.0.0.exe",
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 2`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "TestApp-WebSetup-1.0.1.exe",
        "packages": Object {
          "x64": Object {
            "file": "TestApp-1.0.1-x64.nsis.7z",
          },
        },
        "path": "Test App ßW Web Setup 1.0.1.exe",
        "version": "1.0.1",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.0.1.exe",
      "packageFiles": Object {
        "x64": Object {
          "file": "TestApp-1.0.1-x64.nsis.7z",
        },
      },
      "safeArtifactName": "TestApp-WebSetup-1.0.1.exe",
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.0.1-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 3`] = `
Object {
  "name": "Test App ßW Web Setup 1.0.1.exe",
}
`;

exports[`web installer 4`] = `
Array [
  "Test App ßW Web Setup 1.0.1.exe",
  "Test App ßW Web Setup 1.0.1.exe-package.7z",
]
`;
